<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfile">

    <LinearLayout
        android:id="@+id/bigTopPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/material_bg4">

            <ImageView
                android:id="@+id/back_Arrow"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_backspace_black_24dp"/>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_Image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/pix"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-100dp"
            app:civ_border_width="4dp"
            app:civ_border_color="#F6858484" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_name"
            android:textSize="18sp"
            app:fontFamily="@font/carter_one"/>

    </LinearLayout>






    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_android_black_24dp"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text= "@string/track_name"
                android:textSize="18sp"
                app:fontFamily="@font/amarante"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_person_pin_circle_black_24dp"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/country_name"
                android:textSize="18sp"
                app:fontFamily="@font/amarante"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="@string/email_address"
                android:textSize="18sp"
                app:fontFamily="@font/amarante"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_phone_android_black_24dp"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/phone_number"
                android:textSize="18sp"
                app:fontFamily="@font/amarante"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/slack"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/slack_id"
                android:textSize="18sp"
                app:fontFamily="@font/amarante"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>